Updated package.json file with correct information

--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "@finsweet/developer-starter",
+  "name": "@bloomcodeofficial/studiosmile",
   "version": "1.0.0",
-  "description": "Developer starter template for Finsweet projects.",
-  "homepage": "https://github.com/finsweet/developer-starter#readme",
+  "description": "Code for studiosmile.se",
+  "homepage": "https://github.com/bloomcodeofficial/studiosmile#readme",
   "license": "ISC",
   "keywords": [],
   "author": {
-    "name": "Finsweet",
-    "url": "https://www.finsweet.com/"
+    "name": "Bloomweb",
+    "url": "https://www.bloomweb.se/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/finsweet/developer-starter.git"
+    "url": "git+https://github.com/bloomcodeofficial/studiosmile.git"
   },
   "bugs": {
-    "url": "https://github.com/finsweet/developer-starter/issues"
+    "url": "https://github.com/bloomcodeofficial/studiosmile/issues"
   },
   "type": "module",
   "main": "src/index.ts",
