--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@finsweet/tsconfig",
   "compilerOptions": {
+    "allowJs": true,
     "rootDir": ".",
     "baseUrl": "./",
     "paths": {
